fix(components): Section background z-index issue

--- a/components/section/style.shared.scss
+++ b/components/section/style.shared.scss
@@ -30,7 +30,6 @@ tcds-section {
 
   > [slot="background"] {
     position: absolute;
-    z-index: -2;
     width: 100%;
     height: 100%;
     top: 0;
